# alea-preprocess

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
alea_preprocess/: __init__.py
alea_preprocess/algos/: __init__.py  tokenizers.pyi
alea_preprocess/algos/hashing/: __init__.py  blake2.pyi  blake3.pyi  ctph.pyi  rolling.pyi  token_ctph.pyi  token_rolling.pyi
alea_preprocess/algos/ngrams/: __init__.py  binary.pyi  categories.pyi  chars.pyi  words.pyi
alea_preprocess/algos/similarity/: __init__.py  strings.pyi
alea_preprocess/algos/splitting/: __init__.py  simple.pyi
alea_preprocess/algos/unicode/: __init__.py  categories.pyi  normalizations.pyi  segmentations.pyi
alea_preprocess/algos/uu/: __init__.pyi
alea_preprocess/io/: __init__.py
alea_preprocess/io/fs/: __init__.py  directories.pyi  file_info.pyi
alea_preprocess/parsers/: __init__.py
alea_preprocess/parsers/html/: __init__.py  conversion.pyi
alea_preprocess/parsers/pdf/: __init__.py  conversion.pyi  detection.pyi
alea_preprocess/parsers/tika/: __init__.py  client.pyi
alea_preprocess/tasks/: __init__.py  mlm.pyi  sequences.pyi
docker/: build.sh  clean_test.sh
docker/scripts/: install_pdfium.sh  run_tests.sh
docker/ubuntu2404-build/: Dockerfile
docker/ubuntu2404-install/: Dockerfile
resources/: 10usc101.txt  edgar-uu-example.txt  entrepre.htm  file1.html  file2.html  random1  reg_doc_001.html  segfault001.html  test1.docx  treasury.html  usc.100.jsonl
src/: lib.rs
src/algos/: mod.rs
src/algos/hashing/: blake2.rs  blake3.rs  ctph.rs  mod.rs  rolling.rs  token_ctph.rs  token_rolling.rs
src/algos/ngrams/: binary.rs  categories.rs  chars.rs  mod.rs  words.rs
src/algos/segmentation/: abbreviations.rs  mod.rs  sentence.rs
src/algos/similarity/: mod.rs  strings.rs
src/algos/splitting/: simple.rs
src/algos/tokenizers/: mod.rs
src/algos/unicode/: categories.rs  mod.rs  normalizations.rs  segmentations.rs
src/algos/uu/: mod.rs
src/io/fs/: directories.rs  file_info.rs  files.rs  mod.rs
src/parsers/: mod.rs
src/parsers/html/: conversion.rs
src/parsers/pdf/: conversion.rs  detection.rs  gaps.rs  mod.rs  utils.rs
src/parsers/tika/: client.rs
src/tasks/: mlm.rs  mod.rs  sequences.rs
tests/fs/: test_directories.py  test_file_info.py
tests/hashing/: test_blake2b.py  test_blake3.py  test_ctph.py  test_tokens.py
tests/ngrams/: test_byte_ngrams.py  test_category_ngrams.py  test_char_ngrams.py  test_word_ngrams.py
tests/parsers/: test_html.py  test_pdf.py  test_tika.py
tests/similarity/: test_strings.py
tests/splitting/: test_simple.py
tests/tasks/: test_sequences.py
tests/tokenizers/: test_tokenizers.py
tests/unicode/: test_categories.py  test_normalizations.py  test_segmentations.py
tests/uu/: test_uu.py
